# LJJLogger

./: AGENTS.md  README.md  android_tool.sh  build.gradle  build_external.sh  gradle.properties  info.sh  monkey.sh  settings.gradle
app/: .gitignore  build.gradle  release.keystore
app/libs/: mglogger_1.0.0.aar
app/libs/mglogger_1.0.0/: AndroidManifest.xml
app/src/androidTest/java/com/lt/ljjlogger/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/lt/logger/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/mgtv/logger/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lt/ljjlogger/: MainActivity.java  MultiProcessActivity.java  MyApplication.java  RealSendLogRunnable.java
app/src/main/java/com/lt/ljjlogger/log/utils/: AssetReader.java  LogPrinter.java
app/src/main/java/com/lt/mglogger/: MainActivity.java  MultiProcessActivity.java  MyApplication.java  RealSendLogRunnable.java
app/src/main/java/com/mgtv/mglogger/: AssetReader.java  CrashHandler.java  FileUtils.java  MGLog.java  MainActivity.java  MultiProcessActivity.java  MyApplication.java  RealSendLogRunnable.java
app/src/main/java/com/mgtv/mglogger/log/: LogManager.java  LogService.java  MGLog.java  MGLogListener.java  SharedPreferenceUtils.java
app/src/main/res/drawable/: bg_selector.xml  white_border.xml
app/src/main/res/layout/: activity_main.xml  activity_multi_process.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgtv/logger/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ljjlogger/: AGENTS.md  build.gradle  proguard-rules.pro
ljjlogger/src/main/: AndroidManifest.xml
ljjlogger/src/main/cpp/: CMakeLists.txt
ljjlogger/src/main/cpp/jni/: jni_utils.h  logger_jni.cpp
ljjlogger/src/main/cpp/ljjlogger/ljj/: logger_base.h  logger_common.h  logger_core.cpp  logger_core.h  logger_fork.cpp  logger_fork.h  logger_hook.cpp  logger_hook.h  logger_listener.cpp  logger_listener.h  logger_queue.cpp  logger_queue.h  logger_status.h
ljjlogger/src/main/cpp/ljjlogger/logan/: base_util.c  cJSON.h  clogan_status.h  directory_util.h  json_util.c  mmap_util.h
ljjlogger/src/main/java/com/lt/ljjlogger/: LJJLogger.java  LJJLoggerProtocol.java  LJJLoggerStatus.java  LoggerConfig.java  LoggerControlCenter.java  LoggerModel.java  LoggerNativeBridge.java  LoggerUtils.java  LoggerWorker.java  SendAction.java  SendLogRunnable.java  WriteAction.java
ljjlogger/src/main/java/com/lt/ljjlogger/i/: ILogger.java  ILoggerStatus.java  SendLogCallback.java
ljjlogger/src/main/java/com/lt/logger/: LJJLogger.java  LJJLoggerProtocol.java  LJJLoggerStatus.java  LoggerConfig.java  LoggerControlCenter.java  LoggerModel.java  LoggerNativeBridge.java  LoggerUtils.java  LoggerWorker.java  SendAction.java  SendLogRunnable.java  WriteAction.java
ljjlogger/src/main/java/com/lt/logger/i/: ILogger.java  ILoggerStatus.java  SendLogCallback.java
mglogger/: AGENTS.md  README.md  build.gradle  proguard-rules.pro
mglogger/src/androidTest/java/com/mgtv/logger/: ExampleInstrumentedTest.java
mglogger/src/main/: AndroidManifest.xml
mglogger/src/main/cpp/: CMakeLists.txt
mglogger/src/main/cpp/compat/: quick_exit_stub.cpp
mglogger/src/main/cpp/jni/: LogcatCollector.cpp  LogcatCollector.h  NativeLogReaderJni.cpp  NativeLogReaderJni.h  logger_jni.cpp  mglogger_jni.c  mglogger_jni.h
mglogger/src/main/cpp/mglogger/: base_util.h  clogan_core.c  console_util.h  construct_data.c  construct_data.h  directory_util.c  json_util.h  logan_config.h  mmap_util.c  zlib_util.c  zlib_util.h
mglogger/src/main/cpp/mglogger/logan/: aes_util.c  aes_util.h  cJSON.c  clogan_core.h  clogan_status.h  console_util.c  logan_config.h  mmap_util.h
mglogger/src/main/cpp/mglogger/mg/: AesUtil.cpp  AesUtil.h  CLoganCaller.cpp  CloganCaller.h  HookLoglib.cpp  LogdrReader.cpp  LoggerHook.cpp  LoggerHook.h  LoggerHookConfig.h  Logreader.cpp  Logreader.h  MGLogger.cpp  MGLogger.h  MGLoggerStatus.h  ZlibUtil.cpp  ZlibUtil.h  file_utils.cpp  file_utils.h  hook_log.cpp  hook_log_lib.cpp  ilogger.cpp  ilogger.h  logger_base.cpp  logger_base.h  logger_common.h  logger_config.h  logger_core.cpp  logger_core.h  logger_fork.cpp  logger_fork.h  logger_fork_read.cpp  logger_fork_read.h  logger_hook.cpp  logger_hook.h  logger_listener.cpp  logger_listener.h  logger_queue.cpp  logger_queue.h  logger_status.h  logger_utils.h  (+6 more)
mglogger/src/main/java/com/mgtv/logger/: CLoganProtocol.java  ConstantCode.java  Logan.java  LoganConfig.java  LoganControlCenter.java  LoganModel.java  LoganProtocol.java  LoganProtocolHandler.java  LoganThread.java  LoggerConfig.java  LoggerControlCenter.java  LoggerModel.java  LoggerNativeBridge.java  LoggerUtils.java  LoggerWorker.java  MGLogger.java  MGLoggerProtocol.java  MGLoggerStatus.java  OnLoganProtocolStatus.java  SendAction.java  SendLogCallback.java  SendLogDefaultRunnable.java  SendLogRunnable.java  Util.java  WriteAction.java
mglogger/src/main/java/com/mgtv/logger/i/: ILogger.java  ILoggerStatus.java  SendLogCallback.java
mglogger/src/main/java/com/mgtv/logger/java/: CLoganProtocol.java  ConstantCode.java  Logan.java  LoganConfig.java  LoganControlCenter.java  LoganModel.java  LoganProtocol.java  LoganProtocolHandler.java  LoganThread.java  OnLoganProtocolStatus.java  SendAction.java  SendLogCallback.java  SendLogDefaultRunnable.java  SendLogRunnable.java  Util.java  WriteAction.java
mglogger/src/main/java/com/mgtv/logger/log/: CrashHandler.java  LoggerConfig.java  LoggerControlCenter.java  LoggerModel.java  LoggerNativeBridge.java  LoggerWorker.java  MGLogger.java  MGLoggerProtocol.java  MGLoggerStatus.java  SendAction.java  SendLogDefaultRunnable.java  SendLogRunnable.java  Util.java  WriteAction.java
mglogger/src/main/java/com/mgtv/logger/mglog/: BaseLogCollector.java  ILogListener.java  ILogProxy.java  LogCollector.java  LogFileHelper.java  LogManager.java  LogService.java  OnceLogCollector.java
mglogger/src/test/java/com/mgtv/logger/: ExampleUnitTest.java
(+48 files in other folders)
